istio/istio-ingress-vs-addon.yml
# Virtual Service for others hosts
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-exp
  namespace: istio-ingress
spec:
  hosts:
  - grafana.acg-digistore.com
  gateways:
  - istio-ingress/ingress-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3000
        host: grafana.istio-system.svc.cluster.local
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-exp
  namespace: istio-ingress
spec:
  hosts:
  - kiali.acg-digistore.com
  gateways:
  - istio-ingress/ingress-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 20001
        host: kiali.istio-system.svc.cluster.local
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-exp
  namespace: istio-ingress
spec:
  hosts:
  - prometheus.acg-digistore.com
  gateways:
  - istio-ingress/ingress-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9090
        host: prometheus.istio-system.svc.cluster.local
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-exp
  namespace: istio-ingress
spec:
  hosts:
  - jaeger.acg-digistore.com
  gateways:
  - istio-ingress/ingress-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: tracing.istio-system.svc.cluster.local
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zipkin-exp
  namespace: istio-ingress
spec:
  hosts:
  - zipkin.acg-digistore.com
  gateways:
  - istio-ingress/ingress-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9411
        host: zipkin.istio-system.svc.cluster.local
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loki-exp
  namespace: istio-ingress
spec:
  hosts:
  - loki.acg-digistore.com
  gateways:
  - istio-ingress/ingress-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9095
        host: loki.istio-system.svc.cluster.local
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-exp
  namespace: kubernetes-dashboard
spec:
  hosts:
  - kube.acg-digistore.com
  gateways:
  - istio-ingress/ingress-gateway
  - mesh
  tls:
  - match:
    - port: 443
      sniHosts:
       - kube.acg-digistore.com
    route:
    - destination:
        port:
          number: 443
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
      weight: 100
