istio/istio-ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
#    - "*"
    - www.acg-digistore.com
    - grafana.acg-digistore.com
    - kiali.acg-digistore.com
    - prometheus.acg-digistore.com
    - jaeger.acg-digistore.com
    - zipkin.acg-digistore.com
    - loki.acg-digistore.com
    tls:
      mode: SIMPLE # enables HTTPS on this port, TLS offload here
      credentialName: istio-ingress-crt
#      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
#      privateKey: /etc/istio/ingressgateway-certs/tls.key
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
#    - "*"
    - www.acg-digistore.com
    - grafana.acg-digistore.com
    - kiali.acg-digistore.com
    - prometheus.acg-digistore.com
    - jaeger.acg-digistore.com
    - zipkin.acg-digistore.com
    - loki.acg-digistore.com
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - port:
      number: 443
      name: https-443-pass
      protocol: HTTPS
    hosts:
    - "kube.acg-digistore.com"
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: digistore-frontend-ms
  namespace: default
spec:
  hosts:
  - www.acg-digistore.com
  gateways:
  - istio-ingress/ingress-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - match:
    - uri:
        prefix: /product
    route:
# Route traffic by DestinationRule
    - destination:
        port:
          number: 80 # can be omitted if it's the only port for reviews
        host: digistore-product-ms-dr.default.svc.cluster.local
        subset: v1
      weight: 40
    - destination:
        port:
          number: 80 # can be omitted if it's the only port for reviews
        host: digistore-product-ms-dr.default.svc.cluster.local
        subset: v2
      weight: 60
# Route traffic by weight
#    - destination:
#        port:
#          number: 80 # can be omitted if it's the only port for reviews
#        host: digistore-product-ms.default.svc.cluster.local
#      weight: 80
#    - destination:
#        port:
#          number: 80 # can be omitted if it's the only port for reviews
#        host: digistore-product-ms-v2.default.svc.cluster.local
#      weight: 20
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80 # can be omitted if it's the only port for reviews
        host: digistore-frontend-ms.default.svc.cluster.local
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: digistore-frontend-ms
  namespace: default
spec:
  host: digistore-product-ms-dr.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
